версия для диска на локальном сервере

--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,5 @@
 [settings]
-DEBUG=False
+DEBUG=True
 SECRET_KEY=y#bz$z0prv)@bie(@3wa@=--ana7%%k!hvo)b-3d4#0mnhh0pi6
 
 AWS_ACCESS_KEY_ID=JCFOR6L3YV635P4IQBOC
